--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Darosa"
         tools:targetApi="31">
         <activity
+            android:name=".ui.score.NilaiSiswaActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.progress.DetailProgressActivity"
             android:exported="false" />
         <activity
